--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,13 @@ services:
       - "3000:3000"
     depends_on:
       - db
+      - chrome
+    tty: true
+    stdin_open: true
+    environment:
+      SELENIUM_DRIVER_URL: http://chrome:4444/wd/hub
+
+  chrome:
+    image: selenium/standalone-chrome@sha256:4a590fc95d67a8eb13464799583991daa6a8548c9a9e2e7f234a92c9c4fa8f29   #Chromeがインストールされたイメージ
+    ports:
+      - "4444:4444"
