--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
     environment:
+      POSTGRES_HOST_AUTH_METHOD: 'trust'
       POSTGRES_PASSWORD: 'postgres'
 
   web:
