--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ before_install:
   - docker-compose up --build -d
 
 script:
-  - docker-compose exec --env 'RAILS ENV=test' web rails db:create
-  - docker-compose exec --env 'RAILS ENV=test' web rails db:migrate
-  - docker-compose exec --env 'RAILS ENV=test' web bin/rspec
+  - docker-compose exec --env 'RAILS_ENV=test' web rails db:create
+  - docker-compose exec --env 'RAILS_ENV=test' web rails db:migrate
+  - docker-compose exec --env 'RAILS_ENV=test' web bin/rspec
