--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
     environment:
-      - POSTGRES_HOST_AUTH_METHOD=trust
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - 'POSTGRES_HOST_AUTH_METHOD=trust'
+      - 'POSTGRES_USER=postgres'
+      - 'POSTGRES_PASSWORD=postgres'
 
   web:
     build: .
@@ -20,10 +20,14 @@ services:
     depends_on:
       - db
       - chrome
+    links: 
+      - db
+      - chrome
     tty: true
     stdin_open: true
     environment:
-      - SELENIUM_DRIVER_URL=http://chrome:4444/wd/hub
+      - 'DATABASE_PASSWORD=postgres'
+      - 'SELENIUM_DRIVER_URL=http://chrome:4444/wd/hub'
 
   chrome:
     image: selenium/standalone-chrome@sha256:4a590fc95d67a8eb13464799583991daa6a8548c9a9e2e7f234a92c9c4fa8f29   #Chromeがインストールされたイメージ
