--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 services: docker
 
 before_install:
-  - docker-compose up --build -d
+  - docker-compose up -d --build
 
 script:
   - docker-compose exec --env 'RAILS_ENV=production' web rails db:create
