--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,18 @@ services: docker
 
 before_install:
   - docker-compose up -d --build
+  - docker login -u "$HEROKU_USERNAME" -p "$HEROKU_API_KEY" registry.heroku.com
 
 script:
-  - docker-compose exec --env 'RAILS_ENV=production' web rails db:create
-  - docker-compose exec --env 'RAILS_ENV=production' web rails db:migrate
-  - docker-compose exec --env 'RAILS_ENV=production' web bin/rspec
+  - docker-compose exec --env 'RAILS_ENV=test' web rails db:create
+  - docker-compose exec --env 'RAILS_ENV=test' web rails db:migrate
+  - docker-compose exec --env 'RAILS_ENV=test' web bin/rspec
+
+deploy:
+  provider: script
+  script:
+    docker build -t registry.heroku.com/$HEROKU_APP_NAME/web -f Dockerfile.prod .;
+    docker push registry.heroku.com/$HEROKU_APP_NAME/web;
+    heroku run --app $HEROKU_APP_NAME rails db:migrate;
+  on:
+    branch: main
