--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ development:
 
 test:
   <<: *default
-  database: myapp_test_test
+  database: myapp_test
 
 production:
   url: <%= ENV['DATABASE_URL']%>
