--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       - image: circleci/ruby:2.6.5
       - image: circleci/postgres:latest
         environment:
-          POSTGRES_ROOT_PASSWORD: password
+          POSTGRES_PASSWORD: password
           POSTGRES_DATABASE: myapp_test
           POSTGRES_USER: postgres
     environment:
