--- a/config/storage.yml
+++ b/config/storage.yml
@@ -7,13 +7,13 @@ local:
   root: <%= Rails.root.join("storage") %>
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-# amazon:
-#   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   # 以下の２行を変更
-#   region: ap-northeast-1
-#   bucket: muscle-king
+amazon:
+  service: S3
+  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+  # 以下の２行を変更
+  region: ap-northeast-1
+  bucket: muscle-king
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
